--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>标准网页</title>
+<title>武汉情况</title>
 <style type="text/css" >
 #bodydiv{ position:relative; margin-left:95px; margin-right:95px;}
-#body{ background-color:#FF8080;
+#body{ background-color:#F3F781;
 margin-top:auto;
 color: #996600;
 font-family: "黑体";
@@ -39,7 +39,7 @@ font-family: "黑体";
 <tr><td align="center"><img src="headimg.jpg" width="200" height="170" /></td></tr></table> </td>
 <td rowspan="2">
 <table border="0" style=" height:24px; width:373px;"background="divbg.gif" >
-<tr><td align="center">日志</td></tr></table>
+<tr><td align="center">国内外信息统计</td></tr></table>
 <table border="0" style="height:380px; width:373px; background-color:#FF814f" cellpadding="0" cellspacing="0">
 <tr><td></td></tr></table> </td>
 <td rowspan="2">
@@ -51,7 +51,7 @@ font-family: "黑体";
 <tr>
 <td>
 <table border="0" style=" height:24px; width:200px;"background="divbg.gif" >
-<tr><td align="center">心情</td></tr></table>
+<tr><td align="center">信息渠道</td></tr></table>
 <table border="0" style="height:170px; width:200px; background-color:#FF814f" cellpadding="0" cellspacing="0">
 <tr><td></td></tr></table>
 </td>
