--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ font-family: "黑体";
 <table align="center" id="bannertable">
 <tr>
 <td>
-<img src="banner.gif" width="770" height="170">
+<img src="image/banner.png" width="770" height="170">
 </td>
 </tr>
 </table>
