--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@ font-family: "黑体";
 #rootdiv{ margin-top:11px;}
 </style>
 </head>
+  
 <body id="body" >
 <div id="bodydiv">
+
 <div id="bannerdiv">
 <table align="center" id="bannertable">
 <tr>
@@ -29,6 +31,7 @@ font-family: "黑体";
 </tr>
 </table>
 </div>
+  
 <div id="centerdiv">
 <table id="centertable" border="0" cellpadding="7px" >
 <tr>
@@ -40,6 +43,7 @@ font-family: "黑体";
 <td rowspan="2">
 <table border="0" style=" height:24px; width:373px;"background="divbg.gif" >
 <tr><td align="center">国内外信息统计</td></tr></table>
+  <p>我是一个段落，千真万确。</p>
 <table border="0" style="height:380px; width:373px; background-color:#FF814f" cellpadding="0" cellspacing="0">
 <tr><td></td></tr></table> </td>
 <td rowspan="2">
