--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ font-family: "黑体";
    <li>大纪元</li>
 
   
-   <li>[李永乐老师]>>>(https://www.youtube.com/channel/UCSs4A6HYKmHA2MG_0z-F0xw)</li>
+   <li><a href="https://www.youtube.com/channel/UCSs4A6HYKmHA2MG_0z-F0xw">李永乐老师</a></li>
   <li>[中华电视公司]>>>(https://www.youtube.com/user/TBSCTS)</li>
  <li> [公民记者陈秋实] >>>(https://www.youtube.com/channel/UCv361SF6FKznoGPKEFG9Yhw)</li>
  <li> [江峰时刻] >>>(https://www.youtube.com/channel/UCa6ERCDt3GzkvLye32ar89w)</li>
