--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@ font-family: "黑体";
 </table>
 </div>
   
+  <div class="button-bar">
+    <a class="button" style="white-space:normal" ng-click="data.filter='cat'">Cats cats and more cats</a>
+    <a class="button" ng-click="data.filter='dog'">Dogs</a>
+    <a class="button" ng-click="data.filter='bird'">Birds</a>
+</div>
+  
 
   
    <ul>高关注度youtuber
