--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ font-family: "黑体";
 </div>
   
   <div class="button-bar">
-    <a class="button" style="white-space:normal" ng-click="data.filter='cat'">Cats cats and more cats</a>
-    <a class="button" ng-click="data.filter='dog'">Dogs</a>
-    <a class="button" ng-click="data.filter='bird'">Birds</a>
+    <a class="button" style="white-space:normal" ng-click="data.filter='cat'">最新疫情发展</a>
+    <a class="button" ng-click="data.filter='dog'">如何进入Youtube</a>
+    <a class="button" ng-click="data.filter='bird'">加入我们</a>
 </div>
   
 
