--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@ font-family: "黑体";
 #centertable{ }
 #rootdiv{ margin-top:11px;}
 </style>
+  
+    <title>Bootstrap 实例 - 静态的顶部</title>
+   <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+   <script src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+   <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
+  
+  
+  
+
+
+
+  
   
 <body id="body" >
 <div id="bodydiv">
@@ -31,6 +43,31 @@ font-family: "黑体";
 </tr>
 </table>
 </div>
+  
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
+   <div class="navbar-header">
+      <a class="navbar-brand" href="#">W3Cschool</a>
+   </div>
+   <div>
+      <ul class="nav navbar-nav">
+         <li class="active"><a href="#">iOS</a></li>
+         <li><a href="#">SVN</a></li>
+         <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+               Java <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+               <li><a href="#">jmeter</a></li>
+               <li><a href="#">EJB</a></li>
+               <li><a href="#">Jasper Report</a></li>
+               <li class="divider"></li>
+               <li><a href="#">分离的链接</a></li>
+               <li class="divider"></li>
+               <li><a href="#">另一个分离的链接</a></li>
+            </ul>
+         </li>
+      </ul>
+   </div></nav>
   
   <div class="button-bar">
     <a class="button" style="white-space:normal" ng-click="data.filter='cat'">最新疫情发展</a>
