--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@ font-family: "黑体";
   
   <nav class="navbar navbar-default navbar-static-top" role="navigation">
    <div class="navbar-header">
-      <a class="navbar-brand" href="#">W3Cschool</a>
+      <a class="navbar-brand" href="#">最新疫情发展</a>
    </div>
    <div>
       <ul class="nav navbar-nav">
-         <li class="active"><a href="#">iOS</a></li>
+         <li class="active"><a href="#">如何进入Youtube</a></li>
          <li><a href="#">SVN</a></li>
          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-               Java <b class="caret"></b>
+               加入我们 <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
                <li><a href="#">jmeter</a></li>
@@ -69,11 +69,7 @@ font-family: "黑体";
       </ul>
    </div></nav>
   
-  <div class="button-bar">
-    <a class="button" style="white-space:normal" ng-click="data.filter='cat'">最新疫情发展</a>
-    <a class="button" ng-click="data.filter='dog'">如何进入Youtube</a>
-    <a class="button" ng-click="data.filter='bird'">加入我们</a>
-</div>
+
   
 
   
