--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@ font-family: "黑体";
 </head>
   
   
-  
 
-
-
-  
   
 <body id="body" >
 <div id="bodydiv">
@@ -51,10 +47,10 @@ font-family: "黑体";
    <div>
       <ul class="nav navbar-nav">
          <li class="active"><a href="#">如何进入Youtube</a></li>
-         <li><a href="#">SVN</a></li>
+         <li><a href="#">加入我们</a></li>
          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-               加入我们 <b class="caret"></b>
+               Youtubert推荐 <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
                <li><a href="#">jmeter</a></li>
