--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ font-family: "黑体";
          <li><a href="#">加入我们</a></li>
          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-               Youtubert推荐 <b class="caret"></b>
+               Youtuber推荐 <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
                <li><a href="#">jmeter</a></li>
@@ -65,9 +65,6 @@ font-family: "黑体";
       </ul>
    </div></nav>
   
-
-  
-
   
    <ul>高关注度youtuber
   <li>新唐人電視臺</li>
