--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ font-family: "黑体";
   
   <nav class="navbar navbar-default navbar-static-top" role="navigation">
    <div class="navbar-header">
-      <a class="navbar-brand" href="#">最新疫情发展</a>
+      <a class="navbar-brand" href="https://vendetta-cn.github.io/wuhan2020/index.html">最新疫情发展</a>
    </div>
    <div>
       <ul class="nav navbar-nav">
