--- a/accessU.html
+++ b/accessU.html
@@ -65,6 +65,15 @@ font-family: "黑体";
       </ul>
    </div></nav>
   
+<h1>为什么有防火墙？</h1>
+ <p> 因外外面有火。这个火是对谁的威胁？我们老百姓不会因为知道信息而有什么损失，那是谁的威胁就显而易见了。</p>
+  <p>多知道信息，一定不是坏处。有些信息真假难辩，我们要通过自己的分析，辨别真假</p>
+
+<h1>为何突破别人的防火墙</h1>
+  <p>他们为了自己的利益，不让我们看到信息，我们要去突破，不然不知道股票为什么涨跌，贸易战情况，甚至是这次的武汉肺炎，更是关乎全家人生死 </p>
+
+<h1>如何访问世界互联网</h1>
+  
   
   
 
