--- a/accessU.html
+++ b/accessU.html
@@ -73,6 +73,10 @@ font-family: "黑体";
   <p>他们为了自己的利益，不让我们看到信息，我们要去突破，不然不知道股票为什么涨跌，贸易战情况，甚至是这次的武汉肺炎，更是关乎全家人生死 </p>
 
 <h1>如何访问世界互联网</h1>
+  <p>其实,在国内的各大论坛这个已经有很多方法</p>
+  不同的电子设备有不同方法：
+ <li> <a href="https://iboy.tech/104.html">访问外网的正确姿势！</a></li>
+  <li><a href="https://blog.csdn.net/bootleader/article/details/82026140">内网访问外网方案</a></li>
   
   
   
