--- a/accessU.html
+++ b/accessU.html
@@ -71,12 +71,14 @@ font-family: "黑体";
 
 <h1>为何突破别人的防火墙</h1>
   <p>他们为了自己的利益，不让我们看到信息，我们要去突破，不然不知道股票为什么涨跌，贸易战情况，甚至是这次的武汉肺炎，更是关乎全家人生死 </p>
-
+<p>为了钱，我们可以跪着,可以忍着</p>
+  <p>今天，跪着也没有虚假的岁月静了，生命受到威胁，我们必须去看看外面的新闻</p>
 <h1>如何访问世界互联网</h1>
   <p>其实,在国内的各大论坛这个已经有很多方法</p>
   不同的电子设备有不同方法：
  <li> <a href="https://iboy.tech/104.html">访问外网的正确姿势！</a></li>
   <li><a href="https://blog.csdn.net/bootleader/article/details/82026140">内网访问外网方案</a></li>
+  <p>还有很多，大家可以去找一下</p>
   
   
   
