--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@ font-family: "黑体";
       </ul>
    </div></nav>
   
+  <h1>最新数据</h1>
+  <a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6"> 
+    美国约翰霍普金斯大学统计结果*</a>
+  <p>*数据来自各国政府，武汉很多人死在家中，都没有录入数据</p>
   
   
   
