--- a/index.html
+++ b/index.html
@@ -69,11 +69,14 @@ font-family: "黑体";
   <a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6"> 
     美国约翰霍普金斯大学统计结果*</a>
   <p>*数据来自各国政府，武汉很多人死在家中，都没有录入数据</p>
-  
+  <p>英国，香港著名高校实验室根据此次病毒传播特征，建立估算模型</p>
+  <p>我们正在找这个数据，尽快呈现链接，也欢迎大家提供给我。</p>
   
   
    <h1>高关注度youtuber</h1>
   <p>我也是最近刚开始看youtube，里面很多有良知的自媒体，下面是一部分比较好的，我会持续添加，也欢迎大家推荐</p>
+  
+  
 
   <li>新唐人電視臺</li>
   <li>美国之音中文网</li>
