--- a/join.html
+++ b/join.html
@@ -66,6 +66,14 @@ font-family: "黑体";
    </div></nav>
   
   
+  <h2>声明：</h2>
+  <p>业余时间制作小网站，无需捐助</p>
+  <p>希望大家传递信息，特别是青年，如果我们这批人都不追求真相，这个社会更不透明，更黑暗</p>
+  <p>欢迎有技术的小伙伴和我们一同运营，优化网站</p>
+  
+  <h2>联系邮箱：</h2>
+  vendetta.utuber@gmail.com 
+  <p>请大家翻墙申请，外国邮箱，不要使用中国公司的邮箱</p>
   
 
 </body>
