--- a/accessU.html
+++ b/accessU.html
@@ -47,7 +47,7 @@ font-family: "黑体";
    <div>
       <ul class="nav navbar-nav">
          <li class="active"><a href="#">如何进入Youtube</a></li>
-         <li><a href="#">加入我们</a></li>
+         <li><a href="https://vendetta-cn.github.io/wuhan2020/join.html">加入我们</a></li>
          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                Youtuber推荐 <b class="caret"></b>
