--- a/join.html
+++ b/join.html
@@ -46,8 +46,8 @@ font-family: "黑体";
    </div>
    <div>
       <ul class="nav navbar-nav">
-         <li class="active"><a href="#">如何进入Youtube</a></li>
-         <li><a href="#">加入我们</a></li>
+         <li class="active"><a href="https://vendetta-cn.github.io/wuhan2020/accessU.html">如何进入Youtube</a></li>
+         <li><a href="https://vendetta-cn.github.io/wuhan2020/join.html">加入我们</a></li>
          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                Youtuber推荐 <b class="caret"></b>
