--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ font-family: "黑体";
   <p>英国，香港著名高校实验室根据此次病毒传播特征，建立估算模型</p>
   <p>我们正在找这个数据，尽快呈现链接，也欢迎大家提供给我。</p>
   
-  
+  <img src="image/corona.gif" height="60" width="190" />
    <h1>高关注度youtuber</h1>
   <p>我也是最近刚开始看youtube，里面很多有良知的自媒体，下面是一部分比较好的，我会持续添加，也欢迎大家推荐</p>
   
@@ -90,6 +90,7 @@ font-family: "黑体";
  <li> [郭文贵] >>>(https://www.youtube.com/channel/UCO3pO3ykAUybrjv3RBbXEHw)</li>
  <li>[ Citizen Laohei公民老黑 ]（https://www.youtube.com/channel/UCtLgwBOza-dnuaBg6W6YXog）</li>
 </ul> 
+  
 ## 为了让和我一样在墙里的同事可以看到更多的信息源头，志愿付出时间经历维护网站，感谢Wuhan2020社区，感谢GitHub支持
 
 </body>
