--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@ font-family: "黑体";
   <p>我们正在找这个数据，尽快呈现链接，也欢迎大家提供给我。</p>
   
   <img src="image/corona.gif" height="120" width="190" />
-   <h1>高关注度youtuber</h1>
+  
+  <h1>news</h1>
+  <p>2020年2月06号， 吹哨者李文亮医生去世，微博出现大量网名冲塔#我要言论自由#，2月7号微博下跪删帖。</p>
+  <p>感谢youtuber记录人民觉醒的光荣时刻。<a href="https://www.youtube.com/watch?v=KIf_Hk2glA8"> 
+    #我要言论自由*</a>
+  </p>
+  <h1>高关注度youtuber</h1>
   <p>我也是最近刚开始看youtube，里面很多有良知的自媒体，下面是一部分比较好的，我会持续添加，也欢迎大家推荐</p>
   
   
