--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@ font-family: "黑体";
   <img src="image/corona.gif" height="120" width="190" />
   
   <h1>news</h1>
-  <p>2020年2月06号， 吹哨者李文亮医生去世，微博出现大量网名冲塔#我要言论自由#，2月7号微博下跪删帖。</p>
+  <li><p>2020年2月06号， 吹哨者李文亮医生去世，微博出现大量网名冲塔#我要言论自由#，2月7号微博下跪删帖。</p></li>
   <p>感谢youtuber记录人民觉醒的光荣时刻。<a href="https://www.youtube.com/watch?v=KIf_Hk2glA8"> 
+    #我要言论自由*</a>  <a href="https://www.youtube.com/watch?v=eQ7OVPNhYq0"> 
     #我要言论自由*</a>
   </p>
   <h1>高关注度youtuber</h1>
