--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ font-family: "黑体";
    <div>
       <ul class="nav navbar-nav">
          <li class="active"><a href="https://vendetta-cn.github.io/wuhan2020/accessU.html">如何进入Youtube</a></li>
+         <li class="active"><a href="accessU.html">中华公众党</a></li>
          <li><a href="https://vendetta-cn.github.io/wuhan2020/join.html">加入我们</a></li>
          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
