--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ font-family: "黑体";
   <img src="image/corona.gif" height="120" width="190" />
   
   <h1>news</h1>
+  <li><p>2020年2月20号，公众党创始人华涌喊出全民涂鸦，反抗标语</p></li>
+  <p>家人被恐吓，他依然用自己生命坚守大旗。</p>
+  <p>用涂鸦标语，告诉我们的同胞，民主中国，我们在撑。如果武汉10000警力，我们10000人去贴，他们就受不了，我们10万去贴，他们就崩溃了。自由贴满大街小巷</p>
   <li><p>2020年2月06号， 吹哨者李文亮医生去世，微博出现大量网名冲塔#我要言论自由#，2月7号微博下跪删帖。</p></li>
   <p>感谢youtuber记录人民觉醒的光荣时刻。<a href="https://www.youtube.com/watch?v=KIf_Hk2glA8"> 
     #我要言论自由*</a>  <a href="https://www.youtube.com/watch?v=eQ7OVPNhYq0"> 
