--- a/party.html
+++ b/party.html
@@ -65,7 +65,7 @@ font-family: "黑体";
          </li>
       </ul>
    </div></nav>
-  
+  <img src="image/party.png" height="200" width="350" />
   <div>
    <h1>全民行动**民主中国**我在行动××兄弟爬山，各自努力</h1>
    <h3>全民反抗、还政于民、释放方斌</h2>
