--- a/party.html
+++ b/party.html
@@ -69,13 +69,13 @@ font-family: "黑体";
   <div>
    <h1>全民行动**民主中国**我在行动××兄弟爬山，各自努力</h1>
    <h3>全民反抗、还政于民、释放方斌</h2>
-   <h3>全民涂鸦，全国各地重建民主墙</h2>
-   <li><p>简单涂鸦，写标语；打印，手写传单，张贴在各处。</p></li>
+   <h3><a href="https://www.youtube.com/watch?v=x57EjVMCCYw">全民涂鸦，全国各地重建民主墙</a>  </h3>
+   <li><p>简单涂鸦(如下图)，写标语；打印，手写传单，张贴在各处。</p></li>
    <p>内容最好能唤起 百姓心底声音。我们要医疗、取消疫情期间的房贷、要求足够的食物</p>
        <P>武汉/湖北地区：要求言论自由，惩罚中央电视台谎言集团、释放方斌</P>
    <li>    <p>涂鸦标语是为了唤醒民众，不是泄愤，一定要注意心理学，把话说道百姓心里，才有用</p></li>
-   <li>    <p>最重要：我们是民主中国的未来，一定先保护好自己（注意监视器、指纹、笔记隐藏），我们的血最后再洒向人间。同志务必珍重，珍重</p></li>
-
+   <li>    <p>最重要：我们是民主中国的未来，一定先保护好自己（注意监视器、指纹、笔记隐藏，不要用手机拍照），快速撤离，我们的血最后再洒向人间。同志务必珍重，珍重</p></li>
+   <img src="image/noCCP.png" height="100" width="150" />
   </div>
 
 </body>
