--- a/party.html
+++ b/party.html
@@ -76,6 +76,7 @@ font-family: "黑体";
    <li>    <p>涂鸦标语是为了唤醒民众，不是泄愤，一定要注意心理学，把话说道百姓心里，才有用</p></li>
    <li>    <p>最重要：我们是民主中国的未来，一定先保护好自己（注意监视器、指纹、笔记隐藏，不要用手机拍照），快速撤离，我们的血最后再洒向人间。同志务必珍重，珍重</p></li>
    <img src="image/noCCP.png" height="100" width="150" />
+    <img src="image/noCCP2.png" height="100" width="150" />
   </div>
 
 </body>
