--- a/party.html
+++ b/party.html
@@ -68,8 +68,8 @@ font-family: "黑体";
   <img src="image/party.png" height="200" width="350" />
   <div>
    <h1>全民行动**民主中国**我在行动××兄弟爬山，各自努力</h1>
-   <h3>全民反抗、还政于民、释放方斌</h2>
-   <h3><a href="https://www.youtube.com/watch?v=x57EjVMCCYw">全民涂鸦，全国各地重建民主墙</a>  </h3>
+   <h3>1.全民反抗、还政于民、释放方斌</h2>
+   <h3>2.<a href="https://www.youtube.com/watch?v=x57EjVMCCYw">全民涂鸦，全国各地重建民主墙</a>  </h3>
    <li><p>简单涂鸦(如下图)，写标语；打印，手写传单，张贴在各处。</p></li>
    <p>内容最好能唤起 百姓心底声音。我们要医疗、取消疫情期间的房贷、要求足够的食物</p>
        <P>武汉/湖北地区：要求言论自由，惩罚中央电视台谎言集团、释放方斌</P>
