--- a/accessU.html
+++ b/accessU.html
@@ -81,7 +81,12 @@ font-family: "黑体";
  <li> <a href="https://iboy.tech/104.html">访问外网的正确姿势！</a></li>
   <li><a href="https://blog.csdn.net/bootleader/article/details/82026140">内网访问外网方案</a></li>
   <p>还有很多，大家可以去找一下</p>
-  
+  <li> 
+    来自江峰漫谈节目的翻墙链接：
+https://is.gd/idq3Uz
+https://is.gd/u61zzZ
+这里還给大家提供一个自带翻墙功能的希望之声手机App, 适用于所有安卓系统的手机（所有的国产手机品牌，以及三星，LG等非iPhone手机）
+  </li>
   <h1>向网警喊话</h1>
   <p>我知道你和我们一样都是普通百姓，你领这份薪水，所以在网上封号，在线下抓人</p>
   <p>但是，我们只是想知道真相，我们和你一样热爱这块土地，我们都是底层中国人，越多的真相，真的对你我，你我的父母，你我的孩子都好，请你今天高台贵手，明天你多一条后路</p>
