--- a/index.html
+++ b/index.html
@@ -69,13 +69,16 @@ font-family: "黑体";
   <h1>最新数据</h1>
   <a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6"> 
     美国约翰霍普金斯大学统计结果*</a>
-  <p>*数据来自各国政府，武汉很多人死在家中，都没有录入数据</p>
+  <p>*数据来自中国政府，武汉很多人死在家中，都没有录入数据，所以这个数据大家自己加零</p>
   <p>英国，香港著名高校实验室根据此次病毒传播特征，建立估算模型</p>
-  <p>我们正在找这个数据，尽快呈现链接，也欢迎大家提供给我。</p>
+  <p>stone记 播报，感染数量在20万左右，甚至还有更多。（2月15号）。</p>
   
   <img src="image/corona.gif" height="120" width="190" />
   
   <h1>news</h1>
+  <li>人大在中共政以来，首次推迟</li>
+  <p>不要听中共说什么，看他做什么。推迟人大，一是他们怕死，一是疫情真的比他们播报的严重</p
+  <p>请大家不要复工，不要去人口密集的地方，坚守等待有效药物和疫苗</p>
   <li><p>2020年2月20号，公众党创始人华涌喊出全民涂鸦，反抗标语</p></li>
   <p>家人被恐吓，他依然用自己生命坚守大旗。</p>
   <p>用涂鸦标语，告诉我们的同胞，民主中国，我们在撑。如果武汉10000警力，我们10000人去贴，他们就受不了，我们10万去贴，他们就崩溃了。自由贴满大街小巷</p>
