--- a/join.html
+++ b/join.html
@@ -66,7 +66,7 @@ font-family: "黑体";
         
       </ul>
    </div></nav>
-  <h1> 自由民主宣传队</h1>
+  <h1> 自由民主宣传组</h1>
   <h3>我们相信 很多青年和我们一样，他们热爱这片土地，但是他们被一种中共宣传包围，如果他们接触到自由民主，就能看清共产党的利益并不是人民的利益，追求我们大众的自由</h3>
   <h2>目标</h2>
   <li><p>在防火墙没有打开之前，向国内传递民主思想、民主义士、公民团体，唤醒青年</p></li>
