--- a/join.html
+++ b/join.html
@@ -70,7 +70,7 @@ font-family: "黑体";
   <h3>我们相信 很多青年和我们一样，他们热爱这片土地，但是他们被一种中共宣传包围，如果他们接触到自由民主，就能看清共产党的利益并不是人民的利益，追求我们大众的自由</h3>
   <h2>目标</h2>
   <li><p>在防火墙没有打开之前，向国内传递民主思想、民主义士、公民团体，唤醒青年</p></li>
-  <li><p>联系大V，up主，建议他们传播民主细想</p></li>
+  <li><p>联系大V，up主，电影解说，建议他们传播民主思想</p></li>
   
   <h2>手段</h2>
   <li><p>人肉/自动 主动发信息到学生/工人/白领,我们就是防火墙上孔，拼命照亮中国</p>
